# modules

./: Qt_json.cpp  README.md  my-code-blocks.files  判断大小端.c  递归数组求和.c
Qt_json/: Qt_json.cpp
apue_16.4/: client  client.c  readme.txt  server  server.c  temp.sh
check_net/: CMakeLists.txt  check_net.c
des3/: Makefile  des3.c  des3.h  test.c
device_discovery/: README.md
device_discovery/client/discovery_client/: discovery.cpp  discovery.h  discovery_client.pro
device_discovery/server/: a.out  server.c
get_endian/: 判断大小端.c
get_proc_pid/: CMakeLists.txt  get_proc_pid.c
queue/: queue_t.c  queue_t.h
recursive_array_count/: 递归数组求和.c
